--- a/src/scheduler.sass
+++ b/src/scheduler.sass
@@ -1,6 +1,6 @@
 $event-colour: #34495e
 $item-margins: 0.25rem
-$border: 0.1rem solid #ddd
+$border: 1px solid #ddd
 $hoverover-colour: #5bc0de
 
 div.rbucks-root
@@ -9,8 +9,6 @@ div.rbucks-root
     font-size: 1.1rem
     line-height: 1.5em
 
-  border-top: $border
-  background: #f1f1f1
   overflow-x: hidden
   div.rbucks-row
     display: flex
@@ -59,6 +57,7 @@ div.rbucks-root
   div.rbucks-cell
     position: relative
     > .rbucks-label
+      box-sizing: border-box
       position: absolute
       bottom: 0
       left: 0
@@ -97,7 +96,7 @@ div.rbucks-root
       border: $active-line-width / 2 solid $hoverover-colour
 
   div.rbucks-event
-    &:not(.disabled)
+    &.clickable:not(.disabled)
       cursor: pointer
     z-index: 2
     .before, .after
@@ -123,7 +122,11 @@ div.rbucks-root
       margin: 0
       &:not(:last-child)
         margin-bottom: 0.5rem
+      &.location
+        white-space: pre-wrap
+        color: #ddd
   .rbucks-label
     color: #888
+    font-size: 0.8rem
   div.rbucks-content .rbucks-label
     color: #ccc
